--- a/src/app/system/modals/role-info/role-info.component.html
+++ b/src/app/system/modals/role-info/role-info.component.html
@@ -1,12 +1,26 @@
 <div class="modal-header">
-    <h4 class="modal-title">Hi there!</h4>
-    <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
+    <h5 class="modal-title" id="exampleModalLabel">Change Role Info</h5>
+    <button type="button" class="close" (click)="activeModal.dismiss('Cross click')" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
     </button>
 </div>
 <div class="modal-body">
-    <p>Hello, {{name}}!</p>
+    <form>
+        <div class="form-group">
+            <label for="recipient-name" class="form-control-label">Name:</label>
+            <input type="text" class="form-control" id="recipient-name" name="name" [(ngModel)]="role.name">
+        </div>
+        <div class="form-group">
+            <label for="message-text" class="form-control-label">Description:</label>
+            <textarea class="form-control" id="message-text" name="description" [(ngModel)]="role.description"></textarea>
+        </div>
+    </form>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Close</button>
+    <button type="button" class="btn btn-secondary" (click)="activeModal.close('Close click')">
+        <!-- <i class="fa fa-angle-left fa-fw"></i> -->
+        Close</button>
+    <button type="button" class="btn btn-success" (click)="activeModal.close('Close click')">
+        <!-- <i class="fa fa-check fa-fw"></i> -->
+        Confirm</button>    
 </div>
