--- a/src/app/system/pages/role-manager/role-manager.component.html
+++ b/src/app/system/pages/role-manager/role-manager.component.html
@@ -22,7 +22,7 @@
                     <td>{{item.description}}</td>
                     <td>
                         <button (click)="openInfoChangeModal(i)" class="btn btn-sm btn-info"><i class="fa fa-edit fa-fw"></i>编辑</button>
-                        <button (click)="openPermissionChangeModal(i)" class="btn btn-sm btn-warning"><i class="fa fa-lock fa-fw"></i>认可</button>                        
+                        <button (click)="openPermissionChangeModal(i)" class="btn btn-sm btn-warning"><i class="fa fa-lock fa-fw"></i>权限</button>
                         <button (click)="deleteRole(i)" class="btn btn-sm btn-danger"><i class="fa fa-trash fa-fw"></i>删除</button>
                     </td>
                 </tr>
