--- a/src/app/system/modals/role-info/role-info.component.html
+++ b/src/app/system/modals/role-info/role-info.component.html
@@ -12,7 +12,8 @@
         </div>
         <div class="form-group">
             <label for="message-text" class="form-control-label">角色描述:</label>
-            <textarea class="form-control" id="message-text" name="description" [(ngModel)]="role.description"></textarea>
+            <textarea class="form-control" id="message-text" name="description" maxlength="100" [(ngModel)]="role.description"></textarea>
+            <p class="text-right">{{role.description.length}}/100</p>
         </div>
     </form>
 </div>
