--- a/src/app/system/pages/permission-manager/permission-manager.component.html
+++ b/src/app/system/pages/permission-manager/permission-manager.component.html
@@ -2,6 +2,54 @@
     <a class="breadcrumb-item" routerLink="/"><i class="fa fa-home fa-fw fa-lg" aria-hidden="true"></i>首页</a>
     <span class="breadcrumb-item active"><i class="fa fa-lock fa-fw fa-lg" aria-hidden="true"></i>权限设置</span>
 </nav>
-<p>
-    权限页面还没有写~~
-</p>
+<div class="card">
+    <div class="card-header">权限分配</div>
+    <div class="card-body">
+        <div class="row">
+            <div class="col-4 border border-muted border-top-0 border-bottom-0 border-left-0">
+                <md-nav-list>
+                    <!-- <h3 md-subheader>权限模块</h3> -->
+                    <md-list-item *ngFor="let model of permissionsModels" (click)="this.activeModelId=model.id">
+                        <a md-line>{{model.name}}</a>
+                        <span class="text-muted"><i class="fa fa-angle-right fa-lg"></i></span>
+                    </md-list-item>
+                    <!-- <md-list-item>
+                        <a md-line>内置服务</a>
+                        <span class="text-muted"><i class="fa fa-angle-right fa-lg"></i></span>
+                    </md-list-item>
+                    <md-list-item>
+                        <a md-line>工具测试</a>
+                        <span class="text-muted"><i class="fa fa-angle-right fa-lg"></i></span>
+                    </md-list-item> -->
+                </md-nav-list>
+            </div>
+            <div class="col-8">
+                <table class="table table-striped">
+                    <tbody>
+                        <tr *ngFor="let permission of getActiveModelPermissions">
+                            <td>{{permission.name}}</td>
+                            <td>
+                                <button (click)="showChangeModal(0)" class="btn btn-sm btn-info"><i class="fa fa-edit fa-fw"></i>编辑</button>
+                                <button (click)="deletePermission(0)" class="btn btn-sm btn-danger"><i class="fa fa-remove fa-fw"></i>删除</button>
+                            </td>
+                        </tr>
+                        <!-- <tr>
+                            <td>管理系统角色</td>
+                            <td>
+                                <button class="btn btn-sm btn-info"><i class="fa fa-edit fa-fw"></i>编辑</button>
+                                <button class="btn btn-sm btn-danger"><i class="fa fa-remove fa-fw"></i>删除</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>管理系统权限</td>
+                            <td>
+                                <button class="btn btn-sm btn-info"><i class="fa fa-edit fa-fw"></i>删除</button>
+                                <button class="btn btn-sm btn-danger"><i class="fa fa-remove fa-fw"></i>编辑</button>
+                            </td>
+                        </tr> -->
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
