--- a/src/app/system/components/menu/menu.component.scss
+++ b/src/app/system/components/menu/menu.component.scss
@@ -3,16 +3,23 @@
     width: 100%;
     overflow-x: hidden;
     overflow-y: auto;
+    // scrollbar-base-color: transparent;
+    // scrollbar-3dlight-color: #1C86EE;
+    // scrollbar-highlight-color: #1C86EE;
+    // scrollbar-track-color: #EBEBEB;
+    // scrollbar-arrow-color: black;
+    // scrollbar-shadow-color: transparent;
+    // scrollbar-dark-shadow-color: #1C86EE;
 }
 
-.app-menu::-webkit-scrollbar-track {
-    background-color: white;
-    border-radius: 10px;
+.app-menu::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+    background-color: transparent;
 }
 
-.app-menu::scrollbar-track {
-    background-color: white;
-    border-radius: 10px;
+.app-menu::-webkit-scrollbar-corner {
+    background: transparent;
 }
 
 .menu-title {
@@ -30,8 +37,7 @@
 }
 
 .avatar {
-    box-shadow: 0px 0px 1px #7e7e7e;
-    // border: 1px solid white;
+    box-shadow: 0px 0px 1px #7e7e7e; // border: 1px solid white;
 }
 
 .menu-list-active {
