--- a/src/app/system/pages/menu-setting/menu-setting.component.html
+++ b/src/app/system/pages/menu-setting/menu-setting.component.html
@@ -3,7 +3,7 @@
     <span class="breadcrumb-item active"><i class="fa fa-bars fa-fw fa-lg" aria-hidden="true"></i>菜单设置</span>
 </nav>
 <div class="card rounded-0">
-    <div class="card-header">菜单设置</div>
+    <div class="card-header">菜单设置<a (click)="addMainMenu()" class="btn-link text-success pointer pull-right"><i class="fa fa-plus fa-fw"></i>添加主菜单</a></div>
     <div class="card-body">
         <div [sortablejs]="menus" [sortablejsOptions]="{ animation: 400 }">
             <div *ngFor="let main of menus">
