--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,8 +3,8 @@
 
 /* @import "~@angular/material/prebuilt-themes/indigo-pink.css"; */
 
-@import "~bootstrap/dist/css/bootstrap.min.css";
-@import "~font-awesome/css/font-awesome.min.css";
+// @import "~bootstrap/dist/css/bootstrap.min.css";
+// @import "~font-awesome/css/font-awesome.min.css";
 @import '~ngx-toastr/toastr.css';
 @import '~prismjs/themes/prism-tomorrow.css';
 
@@ -38,16 +38,37 @@ td img {
 
 /*font style */
 
-.text-white {
-    color: white !important;
-}
-
-.text-black {
-    color: black !important;
-}
-
 
 /*default css */
+
+
+/* 设置滚动条的样式 */
+
+::-webkit-scrollbar {
+    width: 14px;
+    height: 14px;
+    background-color: transparent;
+}
+
+ ::-webkit-scrollbar-track,
+ ::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    border: 5px solid transparent;
+}
+
+ ::-webkit-scrollbar-track {
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, .2) inset;
+}
+
+ ::-webkit-scrollbar-thumb {
+    min-height: 20px;
+    background-clip: content-box;
+    box-shadow: 0 0 0 5px rgba(0, 0, 0, .2) inset;
+}
+
+ ::-webkit-scrollbar-corner {
+    background: transparent;
+}
 
 body {
     background-color: rgb(245, 243, 243);
@@ -90,26 +111,6 @@ a:visited {
     cursor: not-allowed !important;
 }
 
-// .btn-outline-info {
-//     border-color: #caeffb;
-//     background-color: white;
-// }
-// .btn-outline-primary {
-//     border-color: #c2e1fc;
-//     background-color: white;
-// }
-// .btn-outline-danger {
-//     border-color: #e4a1a1;
-//     background-color: white;
-// }
-// .btn-outline-success {
-//     border-color: #c6e7c6;
-//     background-color: white;
-// }
-// .btn-outline-warning {
-//     border-color: #e7cda9;
-//     background-color: white;
-// }
 .pointer {
     cursor: pointer;
 }
