--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,8 +3,8 @@
 
 /* @import "~@angular/material/prebuilt-themes/indigo-pink.css"; */
 
-@import "~bootstrap/dist/css/bootstrap.min.css";
-@import "~font-awesome/css/font-awesome.min.css";
+// @import "~bootstrap/dist/css/bootstrap.min.css";
+// @import "~font-awesome/css/font-awesome.min.css";
 @import '~ngx-toastr/toastr.css';
 @import '~prismjs/themes/prism-tomorrow.css';
 
