--- a/src/app/system/pages/menu-setting/menu-setting.component.html
+++ b/src/app/system/pages/menu-setting/menu-setting.component.html
@@ -3,22 +3,32 @@
     <span class="breadcrumb-item active"><i class="fa fa-bars fa-fw fa-lg" aria-hidden="true"></i>菜单设置</span>
 </nav>
 <div class="card rounded-0">
-    <div class="card-header">菜单设置<a (click)="addMainMenu()" class="btn-link text-success pointer pull-right"><i class="fa fa-plus fa-fw"></i>添加主菜单</a></div>
-    <div class="card-body">
+    <div class="card-header">菜单设置<a (click)="showAddMainMenuPad()" class="btn-link text-success pointer pull-right"><i class="fa fa-plus fa-fw"></i>添加主菜单</a></div>
+    <div class="card-body p-0">
         <div [sortablejs]="menus" [sortablejsOptions]="{ animation: 400 }">
-            <div *ngFor="let main of menus">
-                <div class="card card-body border-top-0 border-right-0 border-left-0 rounded-0">
+            <div *ngFor="let main of menus;index as i">
+                <div class="card card-body border-0 rounded-0">
                     <div class="text-primary">
                         <i class="fa-fw fa-lg {{main.icon}}"></i>{{main.title}}
                         <span class="pull-right">
-                        <button (click)="openChildDialog(main.childs)" class="btn btn-link" title="childs"><i class="fa fa-list text-primary fa-lg"></i></button>
-                        <button class="btn btn-link" title="change"><i class="fa fa-edit text-info fa-lg"></i></button>
-                        <button class="btn btn-link" title="remove"><i class="fa fa-trash text-danger fa-lg"></i></button>
+                        <button (click)="openChildDialog(main.childs)" class="btn btn-link" title="childs"><i class="fa fa-refresh text-primary fa-lg"></i></button>
+                        <button (click)="showChangeMainMenuPad(i)" class="btn btn-link" title="change"><i class="fa fa-edit text-info fa-lg"></i></button>
+                        <button (click)="deleteMainMenu(i)" class="btn btn-link" title="remove"><i class="fa fa-trash text-danger fa-lg"></i></button>
                     </span>
                     </div>
-                    <div *ngFor="let child of main.childs" class="pt-2 pb-2">
-                        <div><i class="fa-fw {{child.icon}}"></i>{{child.title}}</div>
-                    </div>
+                    <table class="table table-striped">
+                        <tbody>
+                            <tr *ngFor="let child of main.childs">
+                                <td style="width:130px;"><i class="{{child.icon}} fa-fw"></i>{{child.title}}</td>
+                                <td style="width:220px;">{{child.icon}}</td>
+                                <td class="text-primary pointer"><span routerLink="{{child.url}}">{{child.url}}</span></td>
+                                <td class="text-right">
+                                    <button (click)="showChangeChildMenuPad(child)" class="btn btn-sm btn-info">编辑</button>
+                                    <button class="btn btn-sm btn-danger">删除</button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
