--- a/src/app/system/modals/menu-add-child/menu-add-child.component.html
+++ b/src/app/system/modals/menu-add-child/menu-add-child.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h5 class="modal-title" id="exampleModalLabel">{{title||'未设置'}}@编辑子菜单</h5>
+    <h5 class="modal-title" id="exampleModalLabel">@添加子菜单</h5>
     <button type="button" class="close pointer" (click)="close()" aria-label="Close">
     <span aria-hidden="true">&times;</span>
 </button>
@@ -24,5 +24,5 @@
     <button type="button" class="btn btn-secondary" (click)="close()">
     <span>取消/返回</span>
 </button>
-    <button type="button" [disabled]="!change.form.valid" loading title="确认修改" class="btn btn-success" #button="btnLoading" (click)="changeChildMenu(button)"></button>
+    <button type="button" [disabled]="!change.form.valid" loading title="确认修改" class="btn btn-success" #button="btnLoading" (click)="addChildMenu(button)"></button>
 </div>
