--- a/src/app/modules/test/pages/confirm-window/confirm-window.component.html
+++ b/src/app/modules/test/pages/confirm-window/confirm-window.component.html
@@ -16,6 +16,6 @@
     <div class="card-header"><i class="fa fa-file-code-o fa-fw fa-lg" aria-hidden="true"></i>代码演示</div>
     <div class="card-body">
         <i class="fa fa-code fa-fw" aria-hidden="true"></i>TS代码：
-        <handy-syntax-highlighter [language]="'typescript'" [content]="code"></handy-syntax-highlighter>
+        <app-code-pad [language]="'typescript'" [content]="code"></app-code-pad>
     </div>
 </div>
