--- a/src/app/modules/test/pages/select-demo/select-demo.component.html
+++ b/src/app/modules/test/pages/select-demo/select-demo.component.html
@@ -51,9 +51,9 @@
             </div>
         </div>
         <p class="text-info"><i class="fa fa-code fa-fw" aria-hidden="true"></i>HTML代码：</p>
-        <handy-syntax-highlighter [language]="'html'" [content]="html_code"></handy-syntax-highlighter>
+        <app-code-pad [language]="'html'" [content]="html_code"></app-code-pad>
         <p class="text-info"><i class="fa fa-code fa-fw" aria-hidden="true"></i>TS代码：</p>
-        <handy-syntax-highlighter [language]="'typescript'" [content]="ts_code"></handy-syntax-highlighter>
+        <app-code-pad [language]="'typescript'" [content]="ts_code"></app-code-pad>
     </div>
 </div>
 <br>
