--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@
 // @import "~bootstrap/dist/css/bootstrap.min.css";
 // @import "~font-awesome/css/font-awesome.min.css";
 @import '~ngx-toastr/toastr.css';
-@import '~prismjs/themes/prism-tomorrow.css';
+@import 'assets/prism/themes/prism-tomorrow.css';
 
 /*default css*/
 
