--- a/src/app/system/modals/permission-change-main/permission-change-main.component.html
+++ b/src/app/system/modals/permission-change-main/permission-change-main.component.html
@@ -1,8 +1,8 @@
 <div class="modal-header">
-    <h5 class="modal-title" id="exampleModalLabel">@添加权限模块</h5>
+    <h5 class="modal-title" id="exampleModalLabel">{{title||'未设置'}}@修改权限模块</h5>
     <button type="button" class="close pointer" (click)="close()" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-    </button>
+      <span aria-hidden="true">&times;</span>
+  </button>
 </div>
 <div class="modal-body">
     <form #addForm="ngForm">
@@ -12,14 +12,14 @@
         </div>
         <div class="form-group">
             <label class="form-control-label">模块描述:</label>
-            <textarea class="form-control rounded-0" id="message-text" name="description" maxlength="100" [(ngModel)]="permissionModel.description" placeholder="无需模块描述" readonly></textarea>
-            <p class="text-right">{{permissionModel.description.length}}/100</p>
+            <textarea class="form-control rounded-0" placeholder="无需模块描述" readonly></textarea>
+            <p class="text-right">0/100</p>
         </div>
     </form>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-secondary" (click)="close()">
-        <span>取消/返回</span>
-    </button>
-    <button type="button" [disabled]="!addForm.form.valid" loading title="确认添加" class="btn btn-success" #button="btnLoading" (click)="addPermissionModel(button)"></button>
+      <span>取消/返回</span>
+  </button>
+    <button type="button" [disabled]="!addForm.form.valid" loading title="确认修改" class="btn btn-success" #button="btnLoading" (click)="applayPermissionModelChange(button)"></button>
 </div>
